--- a/_posts/2017-04-20-test-post.md
+++ b/_posts/2017-04-20-test-post.md
@@ -4,6 +4,4 @@ published: true
 ## A New Post
 
 Enter text in [Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.
-![01001007927.jpg]({{site.baseurl}}/_posts/01001007927.jpg)
-
-
+![]({{site.baseurl}}/https://i.ytimg.com/vi/giFOtD4z0YY/maxresdefault.jpg)
