--- a/_posts/2017-05-12-about-me.md
+++ b/_posts/2017-05-12-about-me.md
@@ -2,6 +2,4 @@
 published: false
 ---
 ## About Me
-Life is so interesting with it's attractive emotions, with new impressive adventures in perspective, with surprises and vital puzzles. I am a seeker of new emotions, affectionate to surprises and vital puzzles. Once I decided that all of this I could get with Computer Science ...
-
-
+Life is so interesting with it's attractive emotions, with new impressive adventures in perspective, with surprises and vital puzzles. I am a seeker of them. Once I decided that all of this I could get with Computer Science and start studying with great hopes. Now I am happy with my decision, I 
