--- a/_posts/2017-05-12-about-me.md
+++ b/_posts/2017-05-12-about-me.md
@@ -2,4 +2,9 @@
 published: false
 ---
 ## About Me
-Life is so interesting with it's attractive emotions, with new impressive adventures in perspective, with surprises and vital puzzles. I am a seeker of them. Once I decided that all of this I could get with Computer Science and start studying with great hopes. Now I am happy with my decision, on the way of getting accustomed with the world of Computer Sciense I have learnt many interesting thing from different fields. For example I when I introduced Artificial Intelligence and Artificial Neural Networks I was working on Georgian Versification, was making AI system which would learn characteristics of the Georgian poems: it's structure, poetical methods, writing style of some Georgian poets and etc. 
+
+Life is so interesting with it's attractive emotions, with new impressive adventures, with surprises and vital puzzles. I am a seeker of them. Once I decided that all of this I could get with Computer Science and start studying with great hopes. Now I am happy with my decision, on the way of getting accustomed with the world of Computer Sciense I have learnt many interesting things from different fields. For example when I introduced Artificial Intelligence and Artificial Neural Networks I was working on Georgian Versification, I was making AI system which would learn characteristics of the Georgian poems: it's structure, poetical methods, writing style of some Georgian poets and etc. It was absolutely enthusiastic work. For a few months I worked in some private company as intern programmer, making the School Management System by ASP.NET MVC. After June of 2015 I work in Tbilservice Group (Tbilisi City Hall) as a programmer with a great team, here I faced many interesting problems like a routing of rubbish cars, accounting of company workers, management of company pulic services. We solved this problems by different technologies like Android Development, PHP, ASP.NET and WCF Services. So I got there good experience in programming and teamwork skills.
+
+At the same time I am master's student of Tbilisi State University (TSU), studying Informational Systems. Scientific work are so attractive for me, I took part in interesting student project about Fuzzy Logic and decision making ("Intuitionistic and hesitant fuzzy operators in a multi criteria decision making heuristic methods"). Also I participated in a Republican Student Conference with a topic "Georgian Handwritten Letter Recognition Using Artificial Neural Networks".
+
+So I am  very interested in Artificial Intelligence and Programming and I am ready for new challenges.
